[gd_scene load_steps=40 format=3 uid="uid://dorq8i30gp5v2"]

[ext_resource type="Script" uid="uid://ctri66kfcsifn" path="res://pet.gd" id="1_34gfr"]
[ext_resource type="Texture2D" uid="uid://cc4jeboajotg8" path="res://Sprites/0083.png" id="2_xibd0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7o5ql"]
size = Vector2(27, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_awnet"]
atlas = ExtResource("2_xibd0")
region = Rect2(0, 5160, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2wdx"]
atlas = ExtResource("2_xibd0")
region = Rect2(100, 5160, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_kckgm"]
atlas = ExtResource("2_xibd0")
region = Rect2(200, 5160, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o5ql"]
atlas = ExtResource("2_xibd0")
region = Rect2(0, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t54o"]
atlas = ExtResource("2_xibd0")
region = Rect2(100, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxurb"]
atlas = ExtResource("2_xibd0")
region = Rect2(200, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1pwk"]
atlas = ExtResource("2_xibd0")
region = Rect2(300, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2pvf"]
atlas = ExtResource("2_xibd0")
region = Rect2(400, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_xypoy"]
atlas = ExtResource("2_xibd0")
region = Rect2(400, 0, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0gbd"]
atlas = ExtResource("2_xibd0")
region = Rect2(0, 4320, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8hq5"]
atlas = ExtResource("2_xibd0")
region = Rect2(100, 4320, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bqq7"]
atlas = ExtResource("2_xibd0")
region = Rect2(200, 4320, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_qae7j"]
atlas = ExtResource("2_xibd0")
region = Rect2(300, 4320, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvuc8"]
atlas = ExtResource("2_xibd0")
region = Rect2(400, 4320, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5jns"]
atlas = ExtResource("2_xibd0")
region = Rect2(500, 4320, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_w32yi"]
atlas = ExtResource("2_xibd0")
region = Rect2(600, 4320, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_us1xf"]
atlas = ExtResource("2_xibd0")
region = Rect2(700, 4320, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_621w0"]
atlas = ExtResource("2_xibd0")
region = Rect2(800, 4320, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqo4d"]
atlas = ExtResource("2_xibd0")
region = Rect2(0, 4920, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e2du"]
atlas = ExtResource("2_xibd0")
region = Rect2(100, 4920, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_phljq"]
atlas = ExtResource("2_xibd0")
region = Rect2(200, 4920, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkavk"]
atlas = ExtResource("2_xibd0")
region = Rect2(300, 4920, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_11scu"]
atlas = ExtResource("2_xibd0")
region = Rect2(400, 4920, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nba3"]
atlas = ExtResource("2_xibd0")
region = Rect2(0, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bf13"]
atlas = ExtResource("2_xibd0")
region = Rect2(0, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjut6"]
atlas = ExtResource("2_xibd0")
region = Rect2(100, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrkd0"]
atlas = ExtResource("2_xibd0")
region = Rect2(200, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7tcy"]
atlas = ExtResource("2_xibd0")
region = Rect2(300, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_gda0o"]
atlas = ExtResource("2_xibd0")
region = Rect2(400, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_slpjv"]
atlas = ExtResource("2_xibd0")
region = Rect2(300, 0, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_xibd0"]
atlas = ExtResource("2_xibd0")
region = Rect2(400, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ccft"]
atlas = ExtResource("2_xibd0")
region = Rect2(300, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_myjb5"]
atlas = ExtResource("2_xibd0")
region = Rect2(200, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1av8"]
atlas = ExtResource("2_xibd0")
region = Rect2(100, 4200, 100, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_djl34"]
atlas = ExtResource("2_xibd0")
region = Rect2(0, 4200, 100, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_34gfr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_awnet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2wdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kckgm")
}],
"loop": true,
"name": &"drag",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o5ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t54o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxurb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1pwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2pvf")
}],
"loop": false,
"name": &"drop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xypoy")
}],
"loop": false,
"name": &"idle0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0gbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8hq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bqq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qae7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvuc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5jns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w32yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us1xf")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_621w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0gbd")
}],
"loop": false,
"name": &"idle1",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_qqo4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e2du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phljq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkavk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11scu")
}],
"loop": true,
"name": &"idle2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nba3")
}],
"loop": true,
"name": &"sleep",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bf13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjut6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrkd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7tcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gda0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slpjv")
}],
"loop": false,
"name": &"startup",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xibd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ccft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myjb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1av8")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_djl34")
}],
"loop": false,
"name": &"tosleep",
"speed": 5.0
}]

[node name="Pet" type="Node2D" node_paths=PackedStringArray("timer", "sprite")]
script = ExtResource("1_34gfr")
timer = NodePath("Timer")
sprite = NodePath("Sprite")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.5, -7.5)
shape = SubResource("RectangleShape2D_7o5ql")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_34gfr")
animation = &"idle0"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="Hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_hitbox_mouse_exited"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
